--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,15 +4,15 @@ server:
 # 数据库配置
 spring:
   datasource:
-    url: jdbc:mysql://117.50.162.208:3523/framework?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://117.50.173.184:3523/framework?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
-    password: zxy373161737
+    password: Zxy373161737!
     driver-class-name: com.mysql.cj.jdbc.Driver
   redis:
     # Redis 数据库索引（默认为 0）
     database: 0
     # Redis 服务器地址
-    host: 117.50.162.208
+    host: 117.50.173.184
     # Redis 服务器连接端口
     port: 6379
     # Redis 服务器连接密码（默认为空）
